--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             <input type="text" spellcheck="false" placeholder="Enter City Name">
             <button><img src="images/search.png"></button>
         </div>
+        <div class="error">
+            <p>Invalid city name</p>
+        </div>
         <div class="weather">
             <img src="images/drizzle.png" class="weather-icon">
             <h1 class="temp">22°C</h1>
@@ -42,9 +45,15 @@
         const weatherIcon = document.querySelector(".weather-icon")
         async function checkweather(city){
             const response = await fetch(apiurl + city + `&appid=${apikey}`);
-            var data = await response.json();
+
+            if(response.status == 404){
+                document.querySelector(".error").style.display = "block";
+                document.querySelector(".weather").style.display = "none";
+            }
+            else{
 
             
+            var data = await response.json();     
 
             document.querySelector(".city").innerHTML = data.name;
             document.querySelector(".temp").innerHTML =  Math.round(data.main.temp) + "°C" ;
@@ -71,6 +80,8 @@
             }
             console.log(data)
             document.querySelector(".weather").style.display = "block"
+            document.querySelector(".error").style.display = "none";
+        }
         }
         searchbtn.addEventListener("click", ()=>{
             checkweather(searchbox.value);
